# myGboosting

./: CMakeLists.txt  README.md
src/: main.cpp
src/algo/: binarization.cpp  binarization.h  config.h  defines.h  model.cpp  model.h  odt.cpp  odt.h  partitioning.cpp  partitioning.h  pool.h  split.cpp  split.h  tree.cpp
src/modes/: predict.cpp  predict.h  train.cpp  train.h
testing/: simple_test.py  xgboost_ligthgbm_facebook.ipynb
testing/datasets/: data.csv
